--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,6 @@
         <span class="txt-rotate" data-period="2000" data-rotate='[ "i have to", "i have to", "i have to", "i have to", "i have to" ]'></span>
     </h1>
     <script src="https://threejs.org/build/three.js"></script>
-    <script type="module" src="js/app.js"></script>
+    <script type="module" src="./js/app.js"></script>
 </body>
 </html>
